TOBAGO-1368: Create a new theme which uses Bootstrap - flickering after submit fixed (was because of the overlay)

--- a/tobago-theme/tobago-theme-scarborough/src/main/resources/org/apache/myfaces/tobago/renderkit/html/scarborough/standard/style/tobago.css
+++ b/tobago-theme/tobago-theme-scarborough/src/main/resources/org/apache/myfaces/tobago/renderkit/html/scarborough/standard/style/tobago.css
@@ -653,61 +653,6 @@ li.tobago-menu-markup-selected {
     position: relative;
 }
 
-.tobago-page-overlay {
-  display: table;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-/* TODO: better z-index strategy */
-  z-index: 10000;
-}
-
-.tobago-page-overlay-markup-wait {
-  cursor: wait;
-}
-
-.tobago-page-overlay-markup-error {
-  cursor: default;
-}
-
-.tobago-page-overlayCenter {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-  width: 100%;
-/* TODO: better z-index strategy */
-  z-index: 10000;
-}
-
-.tobago-page-overlayCenter img {
-  position: relative;
-}
-
-.tobago-page-overlayWaitPreloadedImage,
-.tobago-page-overlayErrorPreloadedImage,
-.tobago-page-pngFixBlankImage,
-.tobago-page-overlayBackgroundImage {
-  display: none;
-}
-
-.tobago-page-noscript {
-  position: absolute;
-  top: 100px;
-  left: 100px;
-  right: 100px;
-  height: 50px;
-  border: 1px solid black;
-  padding: 30px;
-  background-color: white;
-  font-size: 15px;
-}
-
-.tobago-page-preventFrameAttacks {
-  display: none;
-}
-
 /* panel -------------------------------------------------------------- */
 
 .tobago-panel {
